[package]
name = "indiserver-ui"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21", default_features = false, features = ["glow"] }
egui = "0.21"
image = {version = "0.24", default_features = false, features = ["png"] }
